Bug fixed for images not showing

--- a/Resources/css/Style.css
+++ b/Resources/css/Style.css
@@ -125,7 +125,7 @@ h3 {
 /*------------------------------*/
 
  header {
- 	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url('E:/secret/Computers/HTML/Omnifood/hero.jpg');
+ 	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url('../../hero.jpg');
  	background-size: cover;
  	background-attachment: fixed;
  	background-position: center;
@@ -366,7 +366,7 @@ h3 {
 /*------------------------------*/
 
 .section-testimonials {
-	background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),url('E:/secret/Computers/HTML/Omnifood/back-customers.jpg');
+	background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),url('../../back-customers.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
